# 42-fdf

./: CMakeLists.txt  fdf.h  main.c  read.c  struct.c
include/: fdf.h
libft/: Makefile  get_next_line.h  libft.h
src/: draw.c  fill.c  line.c  main.c  read.c  view.c
test_maps/: 10-2.fdf  1488.fdf
